cmake_minimum_required(VERSION 3.21)
project(cs202_hw3)

set(CMAKE_CXX_STANDARD 11)

add_executable(cs202_hw3 main.cpp DictionarySearchTree.cpp DictionarySearchTree.h DictionaryBST.cpp DictionaryBST.h DictionaryAVLTree.cpp DictionaryAVLTree.h Dictionary23Tree.cpp Dictionary23Tree.h TreeNode.cpp TreeNode.h NodeAVL.cpp NodeAVL.h Node23.cpp Node23.h)
